--- a/lagou-service-user-dev.yml
+++ b/lagou-service-user-dev.yml
@@ -8,7 +8,7 @@ spring:
     password: 123456
   jpa:
     database: MySQL
-    show-sql: true
+    show-sql: false
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl  #避免将驼峰命名转换为下划线命名
